# flet-othello

./: .gitignore  README.md  build.sh  pyproject.toml  pytest.ini  requirements.txt  run.sh
.github/workflows/: deploy.yml  test.yml
docs/: specification.md  test_specification.md
src/: main.py
src/game/: ai.py  auto_play_manager.py  board.py  game.py
src/ui/: auto_play_ui.py  board_ui.py  controls.py  theme.py
tests/: conftest.py  test_ai.py  test_auto_play_manager.py  test_board.py  test_game.py
